--- a/src/index.html
+++ b/src/index.html
@@ -1,13 +1,28 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Document</title>
-</head>
-<body>
-<h1>Hello, from Netology!</h1>
-<img src="img/netology.svg" alt="Netology Logo">
-</body>
+  <html lang="en">
+  <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>Document</title>
+  </head>
+  <body>
+    <div class="img_container">
+      <img alt="banck card" src="./img/visa_curved.png" class="visa card">
+      <img alt="banck card" src="./img/Nspk-mir.png" class="mir card">
+      <img alt="banck card" src="./img/mastercard_curved.png" class="mastercard card">
+      <img alt="banck card" src="./img/maestro_curved.png" class="maestro card">
+      <img alt="banck card" src="./img/jcb.png" class="jcb card">
+      <img alt="banck card" src="./img/discover.png" class="discover card">
+      <img alt="banck card" src="./img/dinersclub.png" class="dinersclub card">
+      <img alt="banck card" src="./img/american_express_curved.png" class="american_express card">
+    </div>
+    <form>
+      <label>
+        <input type="number">
+        <button type="submit" disabled>Click to Validate</button>
+      </label>
+    </form>
+    <p class="error_text"></p>
+  </body>
 </html>
